finished todo list, added data to local storage, called function in html

--- a/rob-mark/index.html
+++ b/rob-mark/index.html
@@ -85,7 +85,7 @@
     <script src="/scripts/articleView.js"></script>
     <script>
       // DONE: What model function do we need to call, to initiate the retrieval of data?
-    $.get('/data/hackipsum.json', populateData);
+    Article.fetchAll();
     </script>
   </body>
 </html>
